# krypto-web

./: .gitignore  README.md
backend/: Cargo.toml  DEBUG.md  Dockerfile  README.md  docker-compose.yml
backend/migrations/: 20240101000000_init.sql  20240102000000_v7_updates.sql  20251124053005_add_entry_equity_to_sessions.sql  20251127000000_add_trailing_state.sql  20251128000000_create_portfolio_cache.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/handlers/: trade_handler.rs
backend/src/models/: strategy.rs
backend/src/services/: market_data.rs  market_stream.rs  mod.rs  portfolio_manager.rs  strategy_generator.rs  trading_engine.rs
frontend/: README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/strategies/[id]/: page.tsx
frontend/components/: ActiveSessions.tsx  CandleChart.tsx  Generator.tsx  PortfolioChart.tsx  RiskMetricsCard.tsx  SessionDetailsDialog.tsx  StrategyList.tsx
frontend/components/ui/: dialog.tsx  slider.tsx
frontend/lib/: api.ts  types.ts
