[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
krypto = { git = "https://github.com/noahbclarkson/krypto", branch = "v2-rewrite" }
binance = { package = "binance-rs-async", version = "1.3.3", features = ["margin_api"] }
polars = { version = "0.37", features = ["lazy", "ndarray", "temporal", "serde", "dynamic_group_by", "abs", "diff", "pct_change", "rolling_window", "ewma", "round_series", "cross_join"] }
rand = "0.8"
env_logger = "0.11.8"

[profile.release]
strip = true
opt-level = "z"
